Manifest all GUI menus, create TextComponents for menus
All possible GUI menus are now manifested, there is currently nothing in them but they are all accessible.

Created TextComponents for each GUI Item in GeneralHelp.

Created TextComponent for the back button.

Fixed a bug where the back button would not be placed if fillWhitePanes was enabled.